--- a/src/css/entities/user/UserMenu.css
+++ b/src/css/entities/user/UserMenu.css
@@ -1,19 +1,3 @@
-/* html, body {
-  max-width: 100%;
-  overflow-x: hidden;
-}
-
-.profileContainer {
-  margin: 20px;
-  }
-
-
-.profilePic {
-  width: 60%;
-  padding: 10px;
-}
- */
- 
 
 * {
   -webkit-box-sizing: border-box;
@@ -27,50 +11,18 @@
     background-image:  linear-gradient(#D1A12A 1px, transparent 1px), 
 linear-gradient(to right, #D1A12A 1px, #e5e5f7 1px);
     background-size: 20px 20px;
+    max-width: 100%;
+  overflow-x: hidden;
 }
-
-:focus {
-  outline: none; }
-
-textarea {
-  resize: none; }
-
-input, textarea, select, button {
-  font-family: "Poppins", sans-serif;
-  font-size: 13px;
-  color: #333; }
-
-p, h1, h2, h3, h4, h5, h6, ul {
-  margin: 0; }
 
 h1 {
   font-family: 'Pacifico', cursive;
   }
 
-ul {
-  padding: 0;
-  margin: 0;
-  list-style: none; }
-
-a {
-  text-decoration: none; }
-
-textarea {
-  resize: none; }
-
-select {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  cursor: pointer;
-  border: none; }
-  select option[value=""][disabled] {
-    display: none; }
 
 img {
   max-width: 100%;
   vertical-align: middle; }
-
-
 
 .wrapper {
   max-width: 1400px;
@@ -80,8 +32,6 @@ img {
   align-items: center;
   justify-content: center; }
 
-.steps .current-info, .wizard > .steps .number {
-  display: none; }
 
 #wizard {
   opacity: 1;
@@ -99,25 +49,6 @@ img {
   #wizard.pt-86 {
     padding-top: 86px; }
 
-/* .steps {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: -50px; }
-  .steps ul {
-    display: flex; }
-    .steps ul li a {
-      display: inline-block;
-      width: 10px;
-      height: 10px;
-      background: #ffffff;
-      border-radius: 50%;
-      margin-right: 8px; }
-    .steps ul li.current a {
-      width: 22px;
-      transition: all 0.5s ease;
-      border-radius: 5.5px; }
- */
 
 .avartar-picker {
   margin-top: 20px; }
@@ -141,19 +72,9 @@ img {
   justify-content: center; }
   
   .form-header .avartar {
-    width: 33.75%; }
-    .form-header .avartar a {
-      display: block; }
+    width: 45.75%; }
   .form-header .form-group {
     width: 66.25%; }
-
-.form-row {
-  display: flex; }
-  .form-row .form-holder {
-    width: 50%;
-    margin-right: 31px; }
-    .form-row .form-holder:last-child {
-      margin-right: 0; }
 
 .form-holder {
   position: relative;
@@ -183,18 +104,6 @@ img {
   padding: 0 25px;
   border-radius: 23px;
   color: #333; }
-  .form-control::-webkit-input-placeholder {
-    color: #808080;
-    text-transform: uppercase; }
-  .form-control::-moz-placeholder {
-    color: #808080;
-    text-transform: uppercase; }
-  .form-control::-ms-input-placeholder {
-    color: #808080;
-    text-transform: uppercase; }
-  .form-control::-moz-placeholder {
-    color: #808080;
-    text-transform: uppercase; }
 
 .submit-button {
   background-color: #D3B72A;
@@ -218,8 +127,13 @@ img {
 }
 
 @media (max-width: 767px) {
-  body {
-    background: none; }
+  body{
+    background-color: #e5e5f7;
+    opacity: 1;
+    background-image:  linear-gradient(#D1A12A 1px, transparent 1px), 
+    linear-gradient(to right, #D1A12A 1px, #e5e5f7 1px);
+    background-size: 20px 20px;
+}
 
   .wrapper {
     height: auto;
@@ -244,24 +158,6 @@ img {
       margin-bottom: 25px; }
     .form-header .form-group {
       width: 100%; }
-
-  .grid .row {
-    display: block; }
-
-  .grid-item {
-    width: 100%; }
-
-  .form-row {
-    display: block; }
-    .form-row .form-holder {
-      width: 100%;
-      margin-right: 0; }
-
-  .actions ul {
-    flex-direction: column;
-    align-items: flex-end; }
-
-  .steps {
-    display: none; } }
+ }
 
 
