--- a/src/css/common/SearchBar/SearchII.css
+++ b/src/css/common/SearchBar/SearchII.css
@@ -21,3 +21,48 @@ linear-gradient(to right, #D1A12A 1px, #e5e5f7 1px);
 h1 {
     font-family: 'Pacifico', cursive;
 }
+
+.input {
+  width: 250px;
+  height: 45px;
+  border: white;
+  outline: none;
+}
+
+.searchIcon {
+  background-color: white;
+  height: 45px;
+  padding-top: 8px;
+  width: 40px;
+  padding-left: 8px;
+}
+
+@media (min-width: 576px) {
+  .input {
+    width: 510px;
+  }
+}
+
+@media (min-width: 768px) {
+  .input {
+    width: 650px;
+  }
+}
+
+@media (min-width: 992px) {
+  .input {
+    width: 820px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .input {
+    width: 1000px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .input {
+    width: 1150px;
+  }
+}
