--- a/src/css/entities/publication/SingleProduct.css
+++ b/src/css/entities/publication/SingleProduct.css
@@ -1,3 +1,14 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+
 body{
     background-color: #e5e5f7;
     opacity: 1;
