--- a/src/css/entities/user/ForgotPassword.css
+++ b/src/css/entities/user/ForgotPassword.css
@@ -1,10 +1,20 @@
+img {
+  max-width: 100%;
+  height: auto;
+}
 
- * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box; }
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0; }
   
-  
+img {
+  max-width: 100%;
+  height: auto;
+}
+    
     body{
       background-color: #e5e5f7;
       opacity: 1;
@@ -54,7 +64,7 @@
   .form-header {
     display: flex;
     justify-content: center;
-    padding-left: 26px; }
+/*     padding-left: 26px; */ }
     
     .form-header .avartar {
       width: 60.75%; }
@@ -69,7 +79,7 @@
     padding-left: 26px;
     margin-bottom: 25px; }
     .form-holder:before {
-      margin-top: 17px;
+      margin-top: 17px !important;
       content: "";
       position: absolute;
       top: 50%;
