--- a/src/css/entities/user/Login.css
+++ b/src/css/entities/user/Login.css
@@ -1,9 +1,17 @@
+
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    box-sizing: border-box; }
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0; }
   
-  
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+
     body{
       background-color: #e5e5f7;
       opacity: 1;
@@ -53,7 +61,7 @@
   .form-header {
     display: flex;
     justify-content: center;
-    padding-left: 26px; }
+    /* padding-left: 26px; */ }
     
     .form-header .avartar {
       width: 60.75%; }
