--- a/src/css/entities/user/Register.css
+++ b/src/css/entities/user/Register.css
@@ -1,7 +1,14 @@
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    box-sizing: border-box; }
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0; }
+
+    img {
+      max-width: 100%;
+      height: auto;
+    }
   
   
     body{
@@ -53,7 +60,7 @@
   .form-header {
     display: flex;
     justify-content: center;
-    padding-left: 26px; }
+    /* padding-left: 26px; */ }
     
     .form-header .avartar {
       width: 60.75%; }
