--- a/src/css/entities/user/ResetPassword.css
+++ b/src/css/entities/user/ResetPassword.css
@@ -2,8 +2,14 @@
  * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    box-sizing: border-box; }
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0; }
   
+    img {
+      max-width: 100%;
+      height: auto;
+    }
   
     body{
       background-color: #e5e5f7;
@@ -54,7 +60,7 @@
   .form-header {
     display: flex;
     justify-content: center;
-    padding-left: 26px; }
+   /*  padding-left: 26px; */ }
     
     .form-header .avartar {
       width: 60.75%; }
