--- a/src/css/entities/user/UserMenu.css
+++ b/src/css/entities/user/UserMenu.css
@@ -2,8 +2,14 @@
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0; }
 
+  img {
+    max-width: 100%;
+    height: auto;
+  }
 
   body{
     background-color: #e5e5f7;
@@ -81,6 +87,7 @@ img {
   padding-left: 26px;
   margin-bottom: 25px; }
   .form-holder:before {
+    margin-top: 0px;
     content: "";
     position: absolute;
     top: 50%;
