--- a/src/css/entities/admin/PublicationsPage.css
+++ b/src/css/entities/admin/PublicationsPage.css
@@ -3,7 +3,10 @@
   background-color: #D3B72A;
   border-style: none;
   font-family: pacifico;
-  padding: 1rem 2.5rem;
-  margin: 0.5rem 1.2rem;
+  margin: 1rem 2rem;
+}
+
+tr, th{
+  font-size: 1rem;;
 }
 
