--- a/src/css/entities/user/UserMenu.css
+++ b/src/css/entities/user/UserMenu.css
@@ -122,7 +122,7 @@ img {
   background-color: #f1d12f;
 }
 
-.forgot-link {
+/* .forgot-link {
   color: #D3B72A;
   font-weight: bold;
   text-decoration: none;
@@ -131,7 +131,7 @@ img {
 .forgot-link:hover {
   text-decoration: none;
   color: #f1d12f;
-}
+} */
 
 @media (max-width: 767px) {
   body{
