--- a/src/css/common/SearchBar/SearchPage.css
+++ b/src/css/common/SearchBar/SearchPage.css
@@ -1,27 +1,3 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  
-  img {
-    max-width: 100%;
-    height: auto;
-  }
-  
-
-body{
-    background-color: #e5e5f7;
-    opacity: 1;
-    background-image:  linear-gradient(#D1A12A 1px, transparent 1px), 
-linear-gradient(to right, #D1A12A 1px, #e5e5f7 1px);
-    background-size: 20px 20px;
-}
-
-h1 {
-    font-family: 'Pacifico', cursive;
-}
-
 .input {
   width: 250px;
   height: 45px;
@@ -40,6 +16,19 @@ h1 {
 
 .no-results {
 margin-top: 90px;  
+}
+
+.search-page-submit-button {
+  background-color: #D3B72A;
+  color: black;
+  border: #D3B72A;
+  width: 100px;
+  height: 60px;
+  font-weight: bold;
+}
+
+.search-page-submit-button {
+  background-color: #f1d12f;
 }
 
 
