--- a/src/css/common/categoryButtons/categoryButtons.css
+++ b/src/css/common/categoryButtons/categoryButtons.css
@@ -1,6 +1,7 @@
 .buttonContainer{
     display: flex;
     justify-content: space-around;
+    padding-top: 80px;
 }
 .categoryButton{
     height: 200px;
@@ -10,7 +11,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border: #D3B72A;
 }
-.title{
+.button-title{
     font-family: 'Poppins';
     font-size: 2rem;
 }
