--- a/src/css/common/footer/footer.css
+++ b/src/css/common/footer/footer.css
@@ -1,6 +1,6 @@
 .footer__top{
     width:100%;
-    background-color:#000;
+    background-color:#999999;
     padding: 40px 5%;
 }
 .footer__top .footer_inner{
@@ -20,4 +20,12 @@
 .footer__top .footer_inner .social__icons a img{
     width: 60px;
     height: 60px;
+}
+.icono{
+    color: white;
+}
+p.derechos{
+    margin-left: 10px;
+    font-family: 'Pacifico';
+    font-size: 20px;
 }
