--- a/src/css/entities/favorites/favoriteList.css
+++ b/src/css/entities/favorites/favoriteList.css
@@ -1,113 +1,71 @@
-/* .favoriteListBtn{
-    background-color: #D3B72A;
-    font-family: 'Poppins';
-    font-size: 1rem;
-    font-weight: 600;
-    border: 3px solid black;
-    padding: 0rem 1rem;
-}
-.listItem{
-    border-bottom:2px dotted black ;
-    font-family: 'Poppins' !important;
-    font-weight: 200 !important;
-    text-align: center;
-    margin: 5px;
-    padding-bottom: 8px;
-    
-}
-.dropdown-menu{
-    background-color: #999999 !important;
-} 
-.removeBtn{
-    background-color: #D3B72A;
-    border-color:  #D3B72A;
-    padding: 10px;
-    margin-left: 220px;
-    width: 80px;
-    border-radius: 10px;
-    
-    
-}
 
-.listItemContainer{
-    display: flex;
-    flex-direction: column;
-   
-    text-align: center;
-}
-
-@keyframes bounce {
-	0%, 20%, 60%, 100% {
-		-webkit-transform: translateY(0);
-		transform: translateY(0);
-	}
-
-	40% {
-		-webkit-transform: translateY(-20px);
-		transform: translateY(-20px);
-	}
-
-	80% {
-		-webkit-transform: translateY(-10px);
-		transform: translateY(-10px);
-	}
-}
-.removeBtn:hover {
-	animation: bounce 1s;
-} */
 .dropdown{
     width: 400px;
-    /* margin: 100px auto; */
 }
-.dropdown .dropdown-btn {
-    padding: 10px;
-    background-color: #D3B72A;
-    box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-family: 'Poppins' !important;
-    font-weight: bold;
-    border: 3px solid black;
-    padding: 0rem 1rem;
+
+.dropdown-content{
+    height: 400px;
+    width: fit-content;
 }
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: #42424292;
+    border-radius: 10px;
+  }
 .dropdown .dropdown-content {
     position: absolute;
+    border-radius: 10px;
     top: 110%;
-    padding: 15px;
-    background: #999999;
+    margin: 0px;
+    padding: 0px;
+    background: white;
     box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06);
-    font-weight: bold;
     width: 95%;
     z-index: 1;
+    overflow-y: auto;
+    overflow-x: hidden;
+    overflow-wrap: break-word;
+    
 }
 .dropdown .dropdown-content .dropdown-item{
-    padding: 10px;
+    
+    /* padding: 10px; */
     cursor: pointer;
     transition: all 0.2s;
-    border-bottom:2px dotted black ;
+    border-top: 4px solid #bbb;
+    /* border-bottom:2px dotted black ; */
     font-family: 'Poppins' !important;
-    font-weight: 200 !important;
-    text-align: center;
-    margin: 5px;
+    font-weight: 300 !important;
+    font-size: 15px;
+    text-align: left;
+    margin-top: 0px;
+    margin-bottom: 0px;
     padding-bottom: 8px;
 } 
 .dropdown .dropdown-content .dropdown-item:hover{
-    background: #43433d;
+    background-color: #ddd;
 
 }  
-.removeBtn{
+button.removeBtn{
     background-color: #D3B72A;
     border-color:  #D3B72A;
     padding: 10px;
-    margin-left: 220px;
+    margin-left: 180px;
     width: 80px;
     border-radius: 10px;
     
 } 
 @keyframes bounce {
 	0%, 20%, 60%, 100% {
-		-webkit-transform: translateY(0);
+        -webkit-transform: translateY(0);
 		transform: translateY(0);
 	}
 
@@ -124,3 +82,30 @@
 .removeBtn:hover {
 	animation: bounce 1s;
 } 
+
+@media only screen and (max-width: 400px) {
+    .dropdown {
+      width: 200px;
+    }
+    button.removeBtn{
+        width: 40px;
+        padding: 0px;
+        margin-left: 100px;
+    }
+    .dropdown .dropdown-content .dropdown-item{
+        font-size: x-small;
+    }
+  }
+
+        /* .dropdown .dropdown-btn {
+            padding: 10px;
+            background-color: #D3B72A;
+            box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06);
+            justify-content: space-between;
+            font-family: 'Poppins' !important;
+            font-weight: bold;
+            border: 3px solid black;
+            padding: 0rem 1rem; 
+            display: flex; 
+            align-items: flex-end;
+        } */
