--- a/src/css/entities/publication/cards/card.css
+++ b/src/css/entities/publication/cards/card.css
@@ -22,14 +22,18 @@
     font-weight: 500;
 }
 
-.card-title{
+h1.card-title{
     font-family: 'Pacifico';
-    margin: 0px;
+    margin-bottom: 40px;
+    padding:20px;
     font-size: 40px;
+    height: 120px;
+    text-align:justify, center;
 }
 .card-text{
     font-family: 'Poppins';
-    margin: 0px 3px 8px;
+    padding:10px;
+    margin-top: 40px;
     font-size: 0.8 rem;
     
 } 
