cambios de estilos pisados en el merge

--- a/src/css/common/header/header.css
+++ b/src/css/common/header/header.css
@@ -48,3 +48,6 @@
     font-weight: bold;
     border: 3px solid black;
 }
+.header__top .header_inner .right button:hover{
+  background-color: #f1d12f;
+}
