--- a/src/css/entities/user/Login.css
+++ b/src/css/entities/user/Login.css
@@ -18,12 +18,15 @@
 }
 
 .login-submit-button {
-  background-color: #D3B72A;
-  color: black;
-  border: #D3B72A;
-  width: 110px;
-  height: 40px;
-  font-weight: bold;
+  padding: 20px;
+    background-color: #D3B72A;
+    box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06);
+    justify-content: space-between;
+    font-family: 'Poppins' !important;
+    font-weight: bold;
+    border: 3px solid black;
+    padding: 0rem 1rem; 
+    border-radius: 3px;
 }
   
 .login-submit-button:hover {
