--- a/src/css/common/header/header.css
+++ b/src/css/common/header/header.css
@@ -34,3 +34,44 @@
   border-radius: 20px;
   background-color: white;
 }
+
+@media (max-width: 576px) {
+  .header__top .header_inner .right button {
+    padding: 0px 10px;
+  }
+
+  .right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .Cart__top img {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+@media (min-width: 768px) {
+  .header__top .header_inner .right button {
+    padding: 0px 12px;
+  }
+}
+
+@media (min-width: 992px) {
+  .header__top .header_inner .right button {
+    padding: 0px 18px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .header__top .header_inner .right button {
+    padding: 0px 20px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .header__top .header_inner .right button {
+    padding: 0px 30px;
+  }
+}
