--- a/src/css/common/spinner/spinner.css
+++ b/src/css/common/spinner/spinner.css
@@ -1,8 +1,9 @@
-.container{
+.container {
     display: flex;
     flex-direction: column;
 }
-.spinner{
+
+.spinner {
     border: 12px dotted #D3B72A;
     width: 300px;
     height: 300px;
@@ -11,19 +12,44 @@
     align-self: center;
     animation: spin 1s linear infinite;
 }
+
 @keyframes spin {
-    0%{
+    0% {
         transform: rotate(0deg);
     }
-    100%{
+
+    100% {
         transform: rotate(360deg);
     }
 }
-.spinnerMessage{
+
+.spinnerMessage {
     font-family: 'Pacifico';
     font-size: 6rem;
     color: #D3B72A;
     text-shadow: 4px 4px #9999;
     align-self: center;
 
+}
+
+@media screen and (max-width: 600px) {
+    .spinner {
+        width: 100px;
+        height: 100px;
+    }
+
+    .spinnerMessage {
+        font-size: 2rem;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .spinner {
+        width: 70px;
+        height: 70px;
+    }
+
+    .spinnerMessage {
+        font-size: 1.5rem;
+    }
 }
