correccion de comentarios

--- a/src/css/entities/user/Register.css
+++ b/src/css/entities/user/Register.css
@@ -58,7 +58,7 @@
   .form-header {
     display: flex;
     justify-content: center;
-    /* padding-left: 26px; */ }
+ }
     
     .form-header .avartar {
       width: 60.75%; }
