--- a/src/css/entities/publication/cards/card.css
+++ b/src/css/entities/publication/cards/card.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
+.card-destacada{
+    height: auto;
+    padding: 0px 0px 15px;
+    background-color: #999999;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    margin: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 .card{
     /* width: 18rem; */
     height: auto;
@@ -12,6 +23,9 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .card:hover{
+    box-shadow: 0 4px 8px 0 rgba(190, 196, 81, 0.468), 0 6px 20px 0 rgba(199, 194, 55, 0.19);
+}
+.card-destacada:hover{
     box-shadow: 0 4px 8px 0 rgba(190, 196, 81, 0.468), 0 6px 20px 0 rgba(199, 194, 55, 0.19);
 }
 .favouriteButton{
@@ -37,25 +51,3 @@ h1.card-title{
     font-size: 0.8 rem;
     
 } 
-.destacada{
-    height: auto;
-    padding: 0px 0px 15px;
-    /* background-color: white; */
-    display: flex;
-    flex-direction: column;
-    border-radius: 5px;
-    margin: 5px;
-    border: solid;
-    border-image-slice: 1;
-    border-width: 5px;
-    border-image-source: 
-        linear-gradient(
-            60deg,
-            #b1e022,
-            #ea4b0c
-        );
-    ;
-}
-h1.destacada{
-    color: red;
-}
