adding validation functions in forgot and reset password

--- a/src/css/entities/user/ForgotPassword.css
+++ b/src/css/entities/user/ForgotPassword.css
@@ -33,6 +33,23 @@
   color: #f1d12f;
 }
 
+.forgot-submit-button {
+  background-color: #D3B72A;
+  color: black;
+  border: #D3B72A;
+  width: 110px;
+  height: 40px;
+  font-weight: bold;
+}
+  
+.forgot-submit-button:hover {
+  background-color: #f1d12f;
+}
+
+.forgot-submit-button:disabled{
+  background-color: #dddddd;
+}
+
  
   @media (max-width: 767px) {
     body{
