--- a/src/css/entities/user/ResetPassword.css
+++ b/src/css/entities/user/ResetPassword.css
@@ -1,30 +1,24 @@
 
- * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0; }
-  
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-  
-    body{
-      background-color: #e5e5f7;
-      opacity: 1;
-      background-image:  linear-gradient(#D1A12A 1px, transparent 1px), 
-  linear-gradient(to right, #D1A12A 1px, #e5e5f7 1px);
-      background-size: 20px 20px;
-      max-width: 100%;
-      overflow-x: hidden
-  }
-  
-  h2 {
-    font-family: 'Poppins', sans-serif;
-    }
-  
+  .reset-form-holder {
+    position: relative;
+    padding-left: 26px;
+    margin-bottom: 25px; }
+    .reset-form-holder:before {
+      margin-top: 15px;
+      content: "";
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      left: 0px;
+      width: 10px;
+      height: 10px;
+      border: 2px solid #D3B72A;
+      border-radius: 50%;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box; }
+    .reset-form-holder.active:before {
+      background: #D3B72A; }
 
   
   @media (max-width: 767px) {
