correccion de posts mostrados en el home, pagina about us en hamburguer menu

--- a/src/css/common/header/hamburger.css
+++ b/src/css/common/header/hamburger.css
@@ -30,6 +30,8 @@ p.menu-title{
   bottom: 0px;
   background-color: #fff;
   padding: 0px 10px;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .Hamburger .hamburgerMenu .cancel {
