--- a/src/css/entities/members/memberCard.css
+++ b/src/css/entities/members/memberCard.css
@@ -14,7 +14,7 @@
 
 }
 .member-card{
-    width: 650px;
+    width: 680px;
     height: 300px;
     display: flex;
     flex-direction: row;
@@ -38,7 +38,7 @@
 .img-container{
     width: 200px;
 }
-img{
+.img-container img{
     border-radius: 50%;
     width: 100%;
 }
