--- a/src/css/entities/publication/cards/card.css
+++ b/src/css/entities/publication/cards/card.css
@@ -1,23 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 .card-destacada{
-    height: auto;
+    height: 350px;
     padding: 0px 0px 15px;
     background-color: #999999;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     border-radius: 5px;
     margin: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .card{
-    /* width: 18rem; */
-    height: auto;
+    height: 350px;
     padding: 0px 0px 15px;
     background-color: white;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     border-radius: 5px;
     margin: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -28,12 +31,20 @@
 .card-destacada:hover{
     box-shadow: 0 4px 8px 0 rgba(190, 196, 81, 0.468), 0 6px 20px 0 rgba(199, 194, 55, 0.19);
 }
+.card-body{
+    flex:1;
+}
+
 .favouriteButton{
     background-color: #D3B72A;
     color:black;
     border-color: #D3B72A;
     font-family: 'Poppins';
     font-weight: 500;
+    align-self: center;
+}
+.favouriteButton:hover{
+    background-color: #f1d12f;
 }
 
 h1.card-title{
@@ -49,5 +60,6 @@ h1.card-title{
     padding:10px;
     margin-top: 40px;
     font-size: 0.8 rem;
+    flex:1;
     
 } 
