--- a/src/css/common/pages/home.css
+++ b/src/css/common/pages/home.css
@@ -13,9 +13,11 @@ section{
  border-radius:2px;
  align-self: flex-end;
  margin-right: 50px;
+ margin-top: 30px;
  
 }
 .seeMoreButton:hover{
     transform: skew(-5deg);
+    background-color: #f1d12f;
     
 }
