--- a/src/css/common/pages/category.css
+++ b/src/css/common/pages/category.css
@@ -1,8 +1,12 @@
 .titulo {
     font-family: 'Pacifico';
-    font-size: 80px;
-    padding: 20px;
-    margin: 20px;
+    font-size: 60px;
+    padding: 0;
+    margin: 0;
     color: #D3B72A;
     text-shadow: 4px 4px #9999;
+}
+
+.card-group {
+    margin-top: 30px;
 }
