--- a/src/css/common/header/header.css
+++ b/src/css/common/header/header.css
@@ -16,14 +16,16 @@
 .header__top .header_inner .left .iconMenu {
   /* width: 30px; */
   cursor: pointer;
-  margin-right: 60px;
+  /*margin-right: 60px;*/
   align-self: flex-start;
+  padding: 0 20px;
 }
 
 .header__top .header_inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 5px;
 }
 
 .header__top .header_inner .right {
@@ -33,11 +35,11 @@
 }
 
 .header__top .header_inner .right button {
-  margin-left: 10px;
+  margin-left: 5px;
   cursor: pointer;
   border-radius: 20px;
   align-self: flex-end;
-  padding: 10px;
+  padding: 0 10px;
   background-color: #D3B72A;
   box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06);
   justify-content: space-between;
@@ -46,14 +48,26 @@
   border: 3px solid black;
 }
 
-@media (max-width: 576px) {
+
+@media screen and (max-width: 360px) {
+  .header__top .header_inner {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 576px) {
   .header__top .header_inner .right button {
-    padding: 0px 10px;
+    padding: 0px 2px;
+    width: 80px;
+    font-size: 12px;
+  }
+
+  .header__top .header_inner .left .iconMenu {
+    padding: 0 5px;
   }
 
   .right {
     display: flex;
-    flex-direction: column;
     align-items: center;
   }
 
@@ -65,7 +79,7 @@
 
 @media (min-width: 768px) {
   .header__top .header_inner .right button {
-    padding: 0px 12px;
+    padding: 0px 3px;
   }
 }
 
