--- a/src/css/entities/publication/SingleProduct.css
+++ b/src/css/entities/publication/SingleProduct.css
@@ -1,4 +1,3 @@
-
 .fav-single-pub-btn {
     margin-top: 15px;
 }
@@ -10,7 +9,7 @@
     box-shadow: 0 0 5px #ccc;
 }
 
-.details{
+.details {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -23,14 +22,14 @@
     font-family: 'Pacifico', cursive;
 }
 
-.details .big-img{
+.details .big-img {
     max-width: 500px;
     min-width: 290px;
     overflow: hidden;
     margin: 25px;
 }
 
-.big-img img{
+.big-img img {
     border: 2px solid black;
     width: 100%;
     height: 100%;
@@ -39,28 +38,29 @@
     object-fit: cover;
 }
 
-.details .box{
+.details .box {
     max-width: 500px;
     min-width: 290px;
     margin: 25px;
 }
 
-.box .row{
+.box .row {
     display: flex;
     justify-content: space-between;
     margin-bottom: 15px;
+    margin-top: 15px;
 }
 
-.box .row h2{
+.box .row h2 {
     text-transform: uppercase;
     letter-spacing: 2px;
 }
 
-.box .row span{
+.box .row span {
     color: crimson;
 }
 
-.box .colors button{
+.box .colors button {
     width: 30px;
     height: 30px;
     border: 1px solid #333;
@@ -74,15 +74,15 @@
     margin: 15px 0;
 }
 
-.thumb{
+.thumb {
     width: 100%;
     height: 100px;
     cursor: pointer;
     margin: 10px 0;
-    
+
 }
 
-.thumb img{
+.thumb img {
     border: 1px solid #D3B72A;
     width: 90px;
     height: 100%;
@@ -93,7 +93,7 @@
     transition: 0.5s linear;
 }
 
-.box .cart{
+.box .cart {
     background: #D3B72A;
     font-weight: bold;
     color: black;
@@ -107,16 +107,16 @@
     justify-content: center;
 }
 
-.box .cart:hover{
+.box .cart:hover {
     background: #e9cd3e;
 }
 
-@media (max-width: 500px){
-    .thumb{
+@media (max-width: 500px) {
+    .thumb {
         height: 50px;
     }
 
-    .thumb img{
+    .thumb img {
         width: 50px;
     }
 }
