--- a/src/css/common/categoryButtons/categoryButtons.css
+++ b/src/css/common/categoryButtons/categoryButtons.css
@@ -11,6 +11,10 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border: #D3B72A;
 }
+.categoryButton:hover{
+    background-color: #f1d12f;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
+}
 .button-title{
     font-family: 'Poppins';
     font-size: 2rem;
